<resources>
    <string name="app_name">PublicAdressSystem</string>
    <string name="title_activity_mainpage">Mainpage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_second">secondActivity</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Turn On Location</string>
    <string name="stop_updates">Turn Off Location</string>
    <string name="location_updated_message">Location updated</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="username">admin</string>
    <string name="userid"></string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
    <string name="signin">Signin</string>
    <string name="user_login">User Login</string>
    <string name="forgot_password">Forgot/Reset Password?</string>
    <string name="back">BACK</string>
    <string name="reset_password">Forgot/Reset Password</string>
    <string name="your_email_here">Your email here</string>
    <string name="reset_instruction">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="forgot_your_password">Forgot/Reset your password?</string>



</resources>
