<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.viren.publicadresssystem.LoginActivity"
    android:background="#ffffff">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="178dp"
        android:layout_height="130dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/images" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_login"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/signin" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:textSize="20sp"

        />
    <TextView
        android:text="@string/not_have_an_account_signup_here"
        android:id="@+id/textViewSignUp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
